# second-opinion

./: README.md  SKILL.md  pyproject.toml  rfc.md  taxonomy.md
adapters/cli/: __main__.py  main.py
agents/: openai.yaml
collections/: tidb-core-pack.yaml  tiflash-pack.yaml
core/: diff_parser.py  model.py
core/assembler/: __init__.py  assembler.py
core/budget/: budget.py
core/final_review/: __init__.py  final_review.py
core/llm/: __init__.py  backend.py  mock_backend.py
core/merger/: merger.py
core/orchestrator/: __init__.py  orchestrator.py  runner.py
core/registry/: __init__.py  registry.py  validator.py
core/selector/: __init__.py  (+1 more)
docs/: USAGE.md  USER_JOURNEY.md
examples/: README.md
fragments/: checklists.md  evidence.md  foo.md  incremental-review-scope.md  output-cn.md  output-en.md  output-review-findings.md  output-review.md  risk-matrix.md  tidb-vectorized-parity.md  tidb-vectorized-performance.md  tidb-vectorized-testing.md
policies/: baseline-high-severity.yaml  compat.yaml  foo.yaml  github-side-effects.yaml  no-github-side-effects.yaml  security.yaml
prompts/: compiler.prompt  reviewer.prompt  tagger.prompt
schema/: review_output.schema.json
schemas/: compile.schema.json  review.schema.json  selection.schema.json
tests/: e2e_helpers.py  test_assets.py  test_budget.py  test_e2e_codex.py  test_e2e_fixtures.py  test_golden_prs.py  test_integration_assets.py  test_integration_external_repo.py  test_prompts.py  test_registry_validation.py  test_reviewers.py  test_schemas.py  test_selector.py  test_stability.py  test_taxonomy.py
(+51 files in other folders)
