[project]
name = "second-opinion"
version = "0.1.0"
description = "Composable AI code review skill"
readme = "rfc.md"
requires-python = ">=3.10"

dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0"
]

[project.optional-dependencies]
 dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "adapters*"]
